[package]
name = "get-contributors-list"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
bevy = { git = "https://github.com/bevyengine/bevy" }
reqwest = { version = "0.10.8", features = ["json"] }
async-compat = "0.1.5"
